--- a/medals.html
+++ b/medals.html
@@ -3,6 +3,7 @@
   <body>
     <h1>Welcome to our store</h1>
     <p>Please choose a section below</p>
+    <p>Thank you for shopping with us!</p>
     <p>We have a fine selection of medals.</p>
     <div>
       <a href="bronze.html">Bronze Metals</a>
